# topconf-paper-search

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
configs/: conferences.yaml
data/index_bge/: index_config.json
examples/: sample_acl.html  sample_cvf.html  sample_iclr_virtual.html  sample_openreview.html  sample_pmlr.html
src/paper_search/: __init__.py  bm25.py  enrich_abstracts.py  export.py  fusion.py  index.py  ingest.py  parsers.py  schema.py  search.py  utils.py
src/topconf_paper_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_parsers.py
